src/fixtures/errors/error-value-expr.lua
error({ a = 1 })
return true
